--- a/sketches.html
+++ b/sketches.html
@@ -31,7 +31,7 @@
       'img3.png'
     ];
 
-    const gallery = document.getElementById('gallery1');
+    const gallery = document.getElementById('gallery');
 
     images.forEach(name => {
       const card = document.createElement('div');
